todo list of data base sync updated
Signed-off-by: NKK <nkk@gmail.com>

--- a/App_Data/todo.txt
+++ b/App_Data/todo.txt
@@ -1,8 +1,1 @@
-spSelectUser to be updated on server
-spupdateuser
-table widths of alluser to be checked
-spUpdatePassword
-spUpdateUserImage
-spUpdateEmail
-spSelectDisplayAllMembers
-spiseamil1verfied
+[spIsEmail1LinkAuthenticate] not updated in local copy of Ranu
